# VTF-db

./: .gitignore  Cargo.toml  README.md
benches/: vtf_bench.rs
src/: error.rs  index.rs  insert.rs  lib.rs  main.rs  model.rs  query.rs  schema.rs  storage.rs  types.rs  validation.rs
src/cli/: commands.rs  handlers.rs
src/core/: error.rs  mod.rs  model.rs  types.rs
src/engine/: delete.rs  insert.rs  join.rs  mod.rs  schema.rs  transaction.rs  update.rs
src/index/: hash.rs  hnsw.rs  mod.rs  rebuild.rs  sorted.rs
src/query/: aggregate.rs  ast.rs  filter.rs  mod.rs  parser.rs  planner.rs  vector.rs
src/storage/: binary.rs  compaction.rs  compression.rs  io.rs  json.rs  mod.rs  validation.rs  wal.rs
tests/: batch_insert_tests.rs  delete_tests.rs  edge_cases.rs  insert_tests.rs  query_tests.rs  storage_tests.rs  update_tests.rs  validation_tests.rs
