[package]
name = "vtf"
version = "0.1.0"
edition = "2021"
description = "VTF (Vector Table Format) — a columnar, typed, JSON-based database engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4" }
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"

[dev-dependencies]
pretty_assertions = "1"
