[package]
name = "vtf"
version = "0.1.0"
edition = "2021"
description = "VTF (Vector Table Format) — a columnar, typed, JSON-based database engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4" }
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"
fs2 = "0.4"
zstd = "0.13"
crc32fast = "1"
instant-distance = { version = "0.6.1", features = ["serde", "with-serde"] }

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vtf_bench"
harness = false
